# onomicon

./: Cargo.toml
src/: lib.rs  main.rs  misc.rs
src/hashers/: hasher.rs
src/samples/: simple.rs
